Change Global Settings Close button to Save
- Change 'Close' button text to 'Save' in Global Settings dialog
- Better reflects that settings are auto-saved when changed
- Provides clearer user feedback on what the button does

--- a/src/hey_orac/web/static/index.html
+++ b/src/hey_orac/web/static/index.html
@@ -855,7 +855,7 @@
                 </div>
             </div>
             <div class="modal-actions">
-                <button type="button" class="btn" onclick="closeGlobalSettings()">Close</button>
+                <button type="button" class="btn" onclick="closeGlobalSettings()">Save</button>
             </div>
         </div>
     </div>
