Add multi-trigger GUI checkbox and template-based settings creation

--- a/src/hey_orac/web/static/index.html
+++ b/src/hey_orac/web/static/index.html
@@ -837,6 +837,15 @@
                     <input type="range" class="form-input" id="volume-vad-threshold" min="0" max="1" step="0.01" value="0.5">
                     <span class="slider-value" id="volume-vad-threshold-value">0.5</span>
                 </div>
+                <div class="form-group">
+                    <label class="form-label" for="multi-trigger-checkbox">
+                        <input type="checkbox" id="multi-trigger-checkbox" style="margin-right: 10px;">
+                        Multi-Trigger Mode
+                        <span style="font-size: 0.8em; color: #888; display: block; margin-top: 5px;">
+                            Allow multiple wake words to trigger simultaneously (Testing Only)
+                        </span>
+                    </label>
+                </div>
             </div>
             <div class="modal-actions">
                 <button type="button" class="btn" onclick="closeGlobalSettings()">Save</button>
