Add STT connection indicator to web interface footer

--- a/src/hey_orac/web/static/index.html
+++ b/src/hey_orac/web/static/index.html
@@ -786,6 +786,10 @@
             <div class="status-item">
                 <span class="last-detection">Last Detection: Never</span>
             </div>
+            <div class="status-item">
+                <div class="status-indicator" id="sttStatus"></div>
+                <span class="stt-status">STT: Checking...</span>
+            </div>
         </div>
 
         <!-- Removed unused first modal (model-modal) to eliminate duplicate IDs -->
