--- a/src/hey_orac/web/static/index.html
+++ b/src/hey_orac/web/static/index.html
@@ -811,6 +811,11 @@
                     <label for="model-api-url" style="display: block; margin-bottom: 10px; color: #00ff41;">Webhook URL</label>
                     <input type="text" id="model-api-url" placeholder="https://example.com/webhook" style="width: 100%; padding: 10px; background: #0a0a0a; border: 1px solid #00ff41; color: #00ff41; border-radius: 5px;">
                 </div>
+                <div class="setting-group" style="margin-bottom: 20px;">
+                    <label for="model-topic" style="display: block; margin-bottom: 10px; color: #00ff41;">Topic</label>
+                    <input type="text" id="model-topic" placeholder="general" style="width: 100%; padding: 10px; background: #0a0a0a; border: 1px solid #00ff41; color: #00ff41; border-radius: 5px;">
+                    <small style="color: #00ff41; opacity: 0.7; display: block; margin-top: 5px;">Topic name for ORAC Core routing (e.g., general, home_assistant)</small>
+                </div>
             </div>
             <div class="modal-footer" style="padding: 20px; border-top: 1px solid #00ff41; text-align: right;">
                 <button class="save-btn" style="background: #00ff41; color: #0a0a0a; border: none; padding: 10px 20px; font-size: 16px; font-weight: bold; cursor: pointer; border-radius: 5px;">Save Settings</button>
