--- a/src/hey_orac/web/static/index.html
+++ b/src/hey_orac/web/static/index.html
@@ -877,6 +877,15 @@
                         </span>
                     </label>
                 </div>
+                <div class="form-group">
+                    <label class="form-label" for="audio-enhancement-checkbox">
+                        <input type="checkbox" id="audio-enhancement-checkbox" style="margin-right: 10px;">
+                        Enable Audio Enhancement
+                        <span style="font-size: 0.8em; color: #888; display: block; margin-top: 5px;">
+                            AGC, compression, and limiting for improved detection range (requires restart)
+                        </span>
+                    </label>
+                </div>
                 <div class="form-group" style="border-top: 1px solid #00ff41; padding-top: 20px; margin-top: 20px;">
                     <label class="form-label" for="volume-default-base-url">Default Base URL</label>
                     <input type="text" class="form-input" id="volume-default-base-url"
